# AudioBookRequest

./: .env.local  .gitignore  404.html  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  DOCKER_HEALTH_CHECK.md  Dockerfile  Issues.md  MAM_ARR_PLAN.md  README.md  api_spec.json  docker-compose.yml  generate_openapi.py  index.html  index.xml  justfile  mise.toml  pyproject.toml  release-please-config.json  sitemap.xml  test_health_check.py
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  check-format.yaml
abr_config/: db.sqlite
alembic/versions/: 03bea7e891dd_add_missing_psql_migrations.py  0c948752a9c2_add_mam_id_to_bookrequest.py  0fa71b2e5d30_add gotify support.py  1adb2da9bf9b_add_series_to_audiobook.py  2a148b82b875_add_audiobook_extra_metadata.py  3f4d017ceb1c_rename_oidc_redirect_scheme.py  592ca7993f69_add_user_extra_data_field.py  63489e50e337_remove_notification_services.py  6477fe89a011_rename_prowlarr_date_col.py  9a71f7625ec9_add_sources_indexers.py  a1b2c3d4e5f6_add_request_log_table.py  a1b2c3d4e5f6_remove_oidc_redirect_https.py  (+7 more)
app/: main.py
categories/: index.html  index.xml
community/: index.html  index.xml
docs/: index.html  index.xml
frontend/: .gitignore  astro.config.mjs  package-lock.json  package.json  tsconfig.json
js/: main.js
scss/: main.css.map
search/: index.html
static/: search.js  tw.css
tags/: index.html  index.xml
templates/: base.html  book_details.html  init.html  invalid_oidc.html  login.html  manual.html  redirect.html  root.html  search.html
(+348 files in other folders)
