[project]
name = "AudioBookRequest"
version = "1.10.1"
requires-python = ">= 3.14"
readme = "README.md"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "argon2-cffi>=25.1.0",
    "argon2-cffi-bindings>=25.1.0",
    "cryptography>=46.0.5",
    "fastapi[standard]>=0.128.7",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "jinja2-fragments>=1.11.0",
    "jinja2-htmlmin>=1.0.1",
    "jinjax>=0.63",
    "markdown>=3.10.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "sqlmodel>=0.0.32",
    "structlog>=25.5.0",
    "terminaltables>=3.1.10",
    "torf>=4.3.1",
    "torrent-parser>=0.4.1",
    "typer>=0.21.2",
    "urllib3>=2.6.3",
]

# setuptools by default expects a "src" folder structure
[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = false

[tool.djlint]
profile = "django"
ignore = "H021"
format_js=true
line_break_after_multiline_tag=true
max_blank_lines=1
# NOTE: custom_html formats documents, but also adds quotes around attributes breaking jinjax
# custom_html="BaseLayout,Index.PopularSection,BookCard"
ignore_case=true




[tool.basedpyright]
typeCheckingMode = "all"
include = ["app"]
reportDeprecated = false
reportUnusedCallResult = false
allowedUntypedLibraries = ["apscheduler", "torrent_parser", "jinjax"]

[dependency-groups]
dev = [
    "basedpyright>=1.37.4",
    "djlint>=1.36.4",
    "ruff>=0.15.0",
]
